# EModelRunner

./: .compile_mod.sh  .gitignore  .gitlab-ci.yml  .gitreview  .install_mods.sh  .install_neurodamus.sh  .install_neuron.sh  .pylintrc  .readthedocs.yml  .zenodo.json  AUTHORS.rst  CHANGELOG.rst  CITATION.cff  CONTRIBUTING.rst  COPYING  LICENSE.txt  MANIFEST.in  Makefile  README.rst  pyproject.toml  requirements_docs.txt  setup.py  tox.ini
.github/workflows/: build.yml  keep-alive.yml  main.yml  test.yml
doc/source/: api.rst  conf.py  index.rst
emodelrunner/: GUI.py  __init__.py  cell.py  configuration.py  create_cells.py  create_hoc.py  create_hoc_tools.py  create_protocols.py  create_recordings.py  create_stimuli.py  example.py  features.py  json_loader.py  json_utilities.py  load.py  locations.py  morphology.py  output.py  parsing_utilities.py  protocols.py  protocols_func.py  recordings.py  run.py  run_glusynapse.py  run_pairsim.py  run_synplas.py  run_thalamus.py  stimuli.py  synapse.py  synplas_analysis.py  synplas_protocols.py  version.py  write_factsheets.py
emodelrunner/GUI_utils/: __init__.py  frames.py  interface.py  plotshape.py  simulator.py  style.py
emodelrunner/configuration/: __init__.py  configparser.py  subgroups.py  validator.py
emodelrunner/factsheets/: __init__.py  experimental_features.py  ion_channel_mechanisms.py  morphology_features.py  output.py  physiology_features.py  units.py
emodelrunner/morphology/: __init__.py  builder.py  morphology.py
emodelrunner/protocols/: __init__.py  create_protocols.py  protocols_func.py  reader.py  sscx_protocols.py  synplas_protocols.py  thalamus_protocols.py
emodelrunner/recipe_protocols/: __init__.py  (+4 more)
tests/: __init__.py  test_emodelrunner.py  test_example.py  test_glusynapse.py  test_synplas.py  utils.py
(+202 files in other folders)
